# fda

./: .gitignore  README.md  commands.sh  conversionJsonParquet.sh  dvc.yaml  flake.nix  pyproject.toml  requirements.txt
R/: build.R  build_pharmacogenomic.R  chrome.R
docs/: DESCRIPTION.md
python/: combineParquetFiles.py  jsonToParquet.py  jsonToParquet.py~HEAD
stages/: build.R  combineParquetFiles.py  conversionJsonParquet.sh  download_docs.sh
