[project]
name = "fda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async-generator>=1.10",
    "attrs>=25.3.0",
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "certifi>=2025.8.3",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "configparser>=7.2.0",
    "crayons>=0.4.0",
    "cryptography>=45.0.7",
    "fake-useragent>=2.2.0",
    "h11>=0.16.0",
    "idna>=3.10",
    "joblib>=1.5.2",
    "lxml>=6.0.1",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "outcome>=1.3.0.post0",
    "pandas>=2.3.2",
    "protobuf>=6.32.1",
    "pyarrow>=21.0.0",
    "pycparser>=2.23",
    "pyopenssl>=25.2.0",
    "pyqt3d>=5.15.7",
    "pyqt5>=5.15.11",
    "pyqt5-sip>=12.17.0",
    "pyqtchart>=5.15.7",
    "pyqtdatavisualization>=5.15.6",
    "pyqtnetworkauth>=5.15.6",
    "pyqtpurchasing>=5.15.6",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "qscintilla>=2.14.1",
    "regex>=2025.9.1",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sortedcontainers>=2.4.0",
    "soupsieve>=2.8",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "trio>=0.30.0",
    "trio-websocket>=0.12.2",
    "urllib3>=2.5.0",
    "webdriver-manager>=4.0.2",
    "wsproto>=1.2.0",
]
